--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Quiz1_SQL.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyOplzST1Jse1qZNJIe+2icB",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,12 +15,34 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/nerthiga/Introduction_to_SQL_Udacity/blob/main/Quiz1_SQL.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "UHk3wuPaqTGM"
       },
       "source": [
         "Select *\n",
+        "From orders;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fHhcVn6ssa3T"
+      },
+      "source": [
+        "Select id, account_id, occurred_at\n",
         "From orders;"
       ],
       "execution_count": null,
