--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOplzST1Jse1qZNJIe+2icB",
+      "authorship_tag": "ABX9TyNqkluY4c8EZyHPMGz954vX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,6 +44,19 @@
       "source": [
         "Select id, account_id, occurred_at\n",
         "From orders;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ai3K8kl_NTYr"
+      },
+      "source": [
+        "SELECT occurred_at, account_id, channel\n",
+        "FROM web_events\n",
+        "LIMIT 15;"
       ],
       "execution_count": null,
       "outputs": []
