--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNqkluY4c8EZyHPMGz954vX",
+      "authorship_tag": "ABX9TyPLmge9AZB/VeWCT1GbAYia",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,6 +57,20 @@
         "SELECT occurred_at, account_id, channel\n",
         "FROM web_events\n",
         "LIMIT 15;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "huSEaVbJPvoc"
+      },
+      "source": [
+        "SELECT id, occurred_at, total_amt_usd\n",
+        "FROM orders\n",
+        "ORDER BY occurred_at\n",
+        "LIMIT 10;\n"
       ],
       "execution_count": null,
       "outputs": []
