--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPLmge9AZB/VeWCT1GbAYia",
+      "authorship_tag": "ABX9TyOyPVCR/0XenkvzxWuO8bSv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,6 +71,34 @@
         "FROM orders\n",
         "ORDER BY occurred_at\n",
         "LIMIT 10;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x7RfTxLBQ5e3"
+      },
+      "source": [
+        "SELECT id, account_id, total_amt_usd\n",
+        "FROM orders\n",
+        "ORDER BY total_amt_usd DESC\n",
+        "LIMIT 5;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XxXeq5ZDRFkp"
+      },
+      "source": [
+        "SELECT id, account_id, total_amt_usd\n",
+        "FROM orders\n",
+        "ORDER BY total_amt_usd\n",
+        "LIMIT 20;"
       ],
       "execution_count": null,
       "outputs": []
