--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOyPVCR/0XenkvzxWuO8bSv",
+      "authorship_tag": "ABX9TyMtu1YYn4IITpmxYtzyLvta",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,6 +99,19 @@
         "FROM orders\n",
         "ORDER BY total_amt_usd\n",
         "LIMIT 20;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3VY6ES8reK0k"
+      },
+      "source": [
+        "SELECT id, account_id, total_amt_usd\n",
+        "FROM orders\n",
+        "ORDER BY account_id, total_amt_usd DESC;"
       ],
       "execution_count": null,
       "outputs": []
