--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMtu1YYn4IITpmxYtzyLvta",
+      "authorship_tag": "ABX9TyMp5GqXdet6MA6AGEV3W/TC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,6 +112,33 @@
         "SELECT id, account_id, total_amt_usd\n",
         "FROM orders\n",
         "ORDER BY account_id, total_amt_usd DESC;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XG6wbfhYeZtB"
+      },
+      "source": [
+        "SELECT id, account_id, total_amt_usd\n",
+        "FROM orders\n",
+        "ORDER BY total_amt_usd DESC, account_id;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5qj2vhIxelee"
+      },
+      "source": [
+        "SELECT *\n",
+        "FROM orders\n",
+        "WHERE gloss_amt_usd>=1000\n",
+        "LIMIT 5;"
       ],
       "execution_count": null,
       "outputs": []
