--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMp5GqXdet6MA6AGEV3W/TC",
+      "authorship_tag": "ABX9TyN9I7t+gehPUj3u5fQ+mk6i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,6 +139,20 @@
         "FROM orders\n",
         "WHERE gloss_amt_usd>=1000\n",
         "LIMIT 5;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nclIr1eGev6R"
+      },
+      "source": [
+        "SELECT *\n",
+        "FROM orders\n",
+        "WHERE total_amt_usd<500\n",
+        "LIMIT 10;"
       ],
       "execution_count": null,
       "outputs": []
