--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN9I7t+gehPUj3u5fQ+mk6i",
+      "authorship_tag": "ABX9TyPOHDkdajeOQdo+BrgrPYLq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -153,6 +153,19 @@
         "FROM orders\n",
         "WHERE total_amt_usd<500\n",
         "LIMIT 10;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VhmwRvDyfYll"
+      },
+      "source": [
+        "SELECT name, website, primary_poc\n",
+        "FROM accounts\n",
+        "WHERE name='Exxon Mobil';"
       ],
       "execution_count": null,
       "outputs": []
