--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPOHDkdajeOQdo+BrgrPYLq",
+      "authorship_tag": "ABX9TyMIonFTcdnLiH2DMIENTRDH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -166,6 +166,32 @@
         "SELECT name, website, primary_poc\n",
         "FROM accounts\n",
         "WHERE name='Exxon Mobil';"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ipt4VWuR1mez"
+      },
+      "source": [
+        "SELECT id, account_id, standard_amt_usd/standard_qty AS unit_price\n",
+        "FROM orders\n",
+        "LIMIT 10;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pwZZylW310-1"
+      },
+      "source": [
+        "SELECT id, account_id, poster_amt_usd/(standard_amt_usd+gloss_amt_usd+poster_amt_usd) AS percentage_revenue\n",
+        "FROM orders\n",
+        "LIMIT 10;"
       ],
       "execution_count": null,
       "outputs": []
