--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMIonFTcdnLiH2DMIENTRDH",
+      "authorship_tag": "ABX9TyO5iQQDuQF6oBid04sZXysq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -192,6 +192,32 @@
         "SELECT id, account_id, poster_amt_usd/(standard_amt_usd+gloss_amt_usd+poster_amt_usd) AS percentage_revenue\n",
         "FROM orders\n",
         "LIMIT 10;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7YdXWVGF2Eo-"
+      },
+      "source": [
+        "SELECT name\n",
+        "FROM accounts\n",
+        "WHERE name LIKE 'C%';\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9X-VvUgt2O6n"
+      },
+      "source": [
+        "SELECT name\n",
+        "FROM accounts\n",
+        "WHERE name LIKE '%one%';\n"
       ],
       "execution_count": null,
       "outputs": []
