--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO5iQQDuQF6oBid04sZXysq",
+      "authorship_tag": "ABX9TyPWso4/hHAdPJ49ca5tkMUn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -218,6 +218,19 @@
         "SELECT name\n",
         "FROM accounts\n",
         "WHERE name LIKE '%one%';\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IGNfGveS2atX"
+      },
+      "source": [
+        "SELECT name\n",
+        "FROM accounts\n",
+        "WHERE name LIKE '%s';"
       ],
       "execution_count": null,
       "outputs": []
