--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPWso4/hHAdPJ49ca5tkMUn",
+      "authorship_tag": "ABX9TyNW72LAd8Je92vSux+zxUes",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -231,6 +231,32 @@
         "SELECT name\n",
         "FROM accounts\n",
         "WHERE name LIKE '%s';"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ybP-Rq5p2rz8"
+      },
+      "source": [
+        "SELECT name, primary_poc, sales_rep_id\n",
+        "FROM accounts\n",
+        "WHERE name IN ('Walmart', 'Target', 'Nordstrom');"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JqsZwFnF24u8"
+      },
+      "source": [
+        "SELECT *\n",
+        "FROM web_events\n",
+        "WHERE channel IN ('organic', 'adwords')"
       ],
       "execution_count": null,
       "outputs": []
