--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNW72LAd8Je92vSux+zxUes",
+      "authorship_tag": "ABX9TyPII3TVdLrvxRnaA4O0994W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -257,6 +257,32 @@
         "SELECT *\n",
         "FROM web_events\n",
         "WHERE channel IN ('organic', 'adwords')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ONxxgojMZw4S"
+      },
+      "source": [
+        "SELECT name, primary_poc, sales_rep_id\n",
+        "FROM accounts\n",
+        "WHERE name NOT IN ('Walmart', 'Target', 'Nordstrom');"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v_-ejBQMZ6p6"
+      },
+      "source": [
+        "SELECT name\n",
+        "FROM accounts\n",
+        "WHERE name NOT LIKE 'C%'"
       ],
       "execution_count": null,
       "outputs": []
