--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPII3TVdLrvxRnaA4O0994W",
+      "authorship_tag": "ABX9TyOFxqIHRLmfdDSNPMEpkXk0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -283,6 +283,19 @@
         "SELECT name\n",
         "FROM accounts\n",
         "WHERE name NOT LIKE 'C%'"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T3Rk9ROZaF6p"
+      },
+      "source": [
+        "SELECT *\n",
+        "FROM orders\n",
+        "WHERE standard_qty>1000 and poster_qty=0 and gloss_qty=0;"
       ],
       "execution_count": null,
       "outputs": []
