--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOFxqIHRLmfdDSNPMEpkXk0",
+      "authorship_tag": "ABX9TyNrg19VpnHRNbZFKmhc7iDk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -296,6 +296,20 @@
         "SELECT *\n",
         "FROM orders\n",
         "WHERE standard_qty>1000 and poster_qty=0 and gloss_qty=0;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mG92qGtaafFs"
+      },
+      "source": [
+        "SELECT occurred_at, gloss_qty\n",
+        "FROM orders\n",
+        "WHERE gloss_qty BETWEEN 24 AND 29\n",
+        "ORDER BY gloss_qty;"
       ],
       "execution_count": null,
       "outputs": []
