--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNrg19VpnHRNbZFKmhc7iDk",
+      "authorship_tag": "ABX9TyMbIBEk7/aDWHBy/40eL2Yq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -310,6 +310,20 @@
         "FROM orders\n",
         "WHERE gloss_qty BETWEEN 24 AND 29\n",
         "ORDER BY gloss_qty;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9bY6GDcdaoFz"
+      },
+      "source": [
+        "SELECT *\n",
+        "FROM web_events\n",
+        "WHERE channel IN ('organic', 'adwords') AND occurred_at BETWEEN '2016-01-01' AND '2017-01-01'\n",
+        "ORDER BY occurred_at DESC;"
       ],
       "execution_count": null,
       "outputs": []
