--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMbIBEk7/aDWHBy/40eL2Yq",
+      "authorship_tag": "ABX9TyPPHd05CxMnUBYcY4uf4En+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -324,6 +324,19 @@
         "FROM web_events\n",
         "WHERE channel IN ('organic', 'adwords') AND occurred_at BETWEEN '2016-01-01' AND '2017-01-01'\n",
         "ORDER BY occurred_at DESC;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t88vRX44M-tk"
+      },
+      "source": [
+        "SELECT id\n",
+        "FROM orders\n",
+        "WHERE gloss_qty>4000 OR poster_qty>4000;"
       ],
       "execution_count": null,
       "outputs": []
