--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPPHd05CxMnUBYcY4uf4En+",
+      "authorship_tag": "ABX9TyNPpwLoIjupn1OW4OY1t+HG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -337,6 +337,19 @@
         "SELECT id\n",
         "FROM orders\n",
         "WHERE gloss_qty>4000 OR poster_qty>4000;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-6wgOVTwNuCp"
+      },
+      "source": [
+        "SELECT *\n",
+        "FROM orders\n",
+        "WHERE standard_qty=0 AND (gloss_qty>1000 or poster_qty>1000);\n"
       ],
       "execution_count": null,
       "outputs": []
