--- a/Quiz1_SQL.ipynb
+++ b/Quiz1_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz1_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNPpwLoIjupn1OW4OY1t+HG",
+      "authorship_tag": "ABX9TyOxRy9wXJkMKcSOvGeYT40V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -350,6 +350,19 @@
         "SELECT *\n",
         "FROM orders\n",
         "WHERE standard_qty=0 AND (gloss_qty>1000 or poster_qty>1000);\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Is1EaSkBOwZg"
+      },
+      "source": [
+        "SELECT name\n",
+        "FROM accounts\n",
+        "WHERE (name LIKE 'C%' OR name LIKE 'W%') AND ((primary_poc LIKE '%ana%' OR primary_poc LIKE '%Ana%') AND primary_poc NOT LIKE '%eana%');"
       ],
       "execution_count": null,
       "outputs": []
