--- a/Quiz2_SQL.ipynb
+++ b/Quiz2_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz2_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOl7nY2C8RYyI6MHTlA+Znu",
+      "authorship_tag": "ABX9TyM87DOgCXFFInamlJSQT5mP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,21 @@
         "ON orders.account_id = accounts.id;\n",
         "\n",
         "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "byru_GcYE1Tg"
+      },
+      "source": [
+        "SELECT w.occurred_at, w.channel, a.primary_poc, a.name\n",
+        "FROM web_events w\n",
+        "JOIN accounts a\n",
+        "ON w.account_id = a.id\n",
+        "WHERE a.name = 'Walmart';\n"
       ],
       "execution_count": null,
       "outputs": []
