--- a/Quiz2_SQL.ipynb
+++ b/Quiz2_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz2_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM87DOgCXFFInamlJSQT5mP",
+      "authorship_tag": "ABX9TyNoZt/xrZFyf0ZBWsoSxUyD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,6 +51,41 @@
         "JOIN accounts a\n",
         "ON w.account_id = a.id\n",
         "WHERE a.name = 'Walmart';\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OJjCgZbFFmOg"
+      },
+      "source": [
+        "SELECT s.name rep, r.name region, a.name account\n",
+        "FROM sales_reps s\n",
+        "JOIN region r\n",
+        "ON s.region_id = r.id\n",
+        "JOIN accounts a\n",
+        "ON s.id = a.sales_rep_id\n",
+        "ORDER BY a.name;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pCPzgEabFzLf"
+      },
+      "source": [
+        "SELECT r.name region, a.name account, o.total_amt_usd/(o.total+0.01) unit_price\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON o.account_id = a.id\n",
+        "JOIN sales_reps s\n",
+        "ON a.sales_rep_id = s.id\n",
+        "JOIN region r\n",
+        "ON s.region_id = r.id;\n"
       ],
       "execution_count": null,
       "outputs": []
