--- a/Quiz2_SQL.ipynb
+++ b/Quiz2_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz2_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNoZt/xrZFyf0ZBWsoSxUyD",
+      "authorship_tag": "ABX9TyNPZhpE6XjbXQirqZ0SNvKq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,6 +86,24 @@
         "ON a.sales_rep_id = s.id\n",
         "JOIN region r\n",
         "ON s.region_id = r.id;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hpgZbTgTSfiJ"
+      },
+      "source": [
+        "SELECT r.name region_name, s.name sales_rep_name, a.name account_name\n",
+        "FROM region r\n",
+        "JOIN sales_reps s\n",
+        "ON r.id = s.region_id\n",
+        "JOIN accounts a\n",
+        "ON s.id = a. sales_rep_id\n",
+        "WHERE r.name = 'Midwest'\n",
+        "ORDER BY a.name;"
       ],
       "execution_count": null,
       "outputs": []
