--- a/Quiz2_SQL.ipynb
+++ b/Quiz2_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz2_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNPZhpE6XjbXQirqZ0SNvKq",
+      "authorship_tag": "ABX9TyN9HYjwfI/qDD1qmYENz5aV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,6 +103,42 @@
         "JOIN accounts a\n",
         "ON s.id = a. sales_rep_id\n",
         "WHERE r.name = 'Midwest'\n",
+        "ORDER BY a.name;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7LsS8yMsSw5V"
+      },
+      "source": [
+        "SELECT r.name region_name, s.name sales_rep_name, a.name account_name\n",
+        "FROM region r\n",
+        "JOIN sales_reps s\n",
+        "ON r.id = s.region_id\n",
+        "JOIN accounts a\n",
+        "ON s.id = a. sales_rep_id\n",
+        "WHERE s.name LIKE 'S%' AND r.name = 'Midwest'\n",
+        "ORDER BY a.name;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XrnZmKpXS_OX"
+      },
+      "source": [
+        "SELECT r.name region_name, s.name sales_rep_name, a.name account_name\n",
+        "FROM region r\n",
+        "JOIN sales_reps s\n",
+        "ON r.id = s.region_id\n",
+        "JOIN accounts a\n",
+        "ON s.id = a. sales_rep_id\n",
+        "WHERE r.name = 'Midwest' AND s.name LIKE '% K%'\n",
         "ORDER BY a.name;"
       ],
       "execution_count": null,
