--- a/Quiz2_SQL.ipynb
+++ b/Quiz2_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz2_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOmOIQZmYsXYpmipM6pATLi",
+      "authorship_tag": "ABX9TyP+yVHtYRpBJWUSWX1oD9rp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -179,6 +179,26 @@
         "ON s.region_id = r.id\n",
         "WHERE o.standard_qty>100 AND o.poster_qty>50\n",
         "ORDER BY unit_price;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yq8NJgkMJjpw"
+      },
+      "source": [
+        "SELECT r.name region, a.name account, o.total_amt_usd/(o.total+0.01) unit_price\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON o.account_id = a.id\n",
+        "JOIN sales_reps s\n",
+        "ON a.sales_rep_id = s.id\n",
+        "JOIN region r\n",
+        "ON s.region_id = r.id\n",
+        "WHERE o.standard_qty>100 AND o.poster_qty>50\n",
+        "ORDER BY unit_price DESC;"
       ],
       "execution_count": null,
       "outputs": []
