--- a/Quiz2_SQL.ipynb
+++ b/Quiz2_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz2_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP+yVHtYRpBJWUSWX1oD9rp",
+      "authorship_tag": "ABX9TyMfWRtPRZeDXOnYICHj6u1s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -199,6 +199,37 @@
         "ON s.region_id = r.id\n",
         "WHERE o.standard_qty>100 AND o.poster_qty>50\n",
         "ORDER BY unit_price DESC;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pycDlUZBCYuI"
+      },
+      "source": [
+        "SELECT DISTINCT a.name, w.channel\n",
+        "FROM accounts a\n",
+        "JOIN web_events w\n",
+        "ON a.id = w.account_id\n",
+        "WHERE a.id='1001';"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CF3Z-IaSCnov"
+      },
+      "source": [
+        "SELECT o.occurred_at, o.total_amt_usd, o.total, a.name\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON o.account_id = a.id\n",
+        "WHERE o.occurred_at BETWEEN '2015-01-01' AND '2016-01-01'\n",
+        "ORDER BY o.occurred_at DESC;\n"
       ],
       "execution_count": null,
       "outputs": []
