--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNLkxjA8EoSaUGakoXz5XX2",
+      "authorship_tag": "ABX9TyNd2NKVa+hUfta/I8J4VCFr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,6 +44,18 @@
       "source": [
         "SELECT COUNT (*) AS sales_rep_count\n",
         "FROM sales_reps;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1IM8dPeqDYUt"
+      },
+      "source": [
+        "SELECT COUNT (*) AS region_count\n",
+        "FROM region;"
       ],
       "execution_count": null,
       "outputs": []
