--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNd2NKVa+hUfta/I8J4VCFr",
+      "authorship_tag": "ABX9TyPPmHSscYqaHUuBgjj+yRTc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,6 +56,30 @@
       "source": [
         "SELECT COUNT (*) AS region_count\n",
         "FROM region;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KnuyOcIpT2kF"
+      },
+      "source": [
+        "SELECT SUM(poster_qty)\n",
+        "FROM orders;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0OLFz869UETs"
+      },
+      "source": [
+        "SELECT SUM(standard_qty)\n",
+        "FROM orders;"
       ],
       "execution_count": null,
       "outputs": []
