--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPPmHSscYqaHUuBgjj+yRTc",
+      "authorship_tag": "ABX9TyP7/xpm6qbFdrpLxr8Xe4dq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,6 +80,18 @@
       "source": [
         "SELECT SUM(standard_qty)\n",
         "FROM orders;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IQlQ5-YKUQbm"
+      },
+      "source": [
+        "SELECT SUM(total_amt_usd)\n",
+        "FROM orders;\n"
       ],
       "execution_count": null,
       "outputs": []
