--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP7/xpm6qbFdrpLxr8Xe4dq",
+      "authorship_tag": "ABX9TyNXUGgY+CIa5aXpxjo1iqOp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,6 +91,30 @@
       },
       "source": [
         "SELECT SUM(total_amt_usd)\n",
+        "FROM orders;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yRI0ocGBUeDY"
+      },
+      "source": [
+        "SELECT standard_amt_usd + gloss_amt_usd AS total\n",
+        "FROM orders;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_Oi6QjaoUrfW"
+      },
+      "source": [
+        "SELECT SUM(standard_amt_usd)/SUM(standard_qty) AS amount_per_unit\n",
         "FROM orders;\n"
       ],
       "execution_count": null,
