--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNXUGgY+CIa5aXpxjo1iqOp",
+      "authorship_tag": "ABX9TyPvFSjhw33X7l9Gd0g3cBKw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,6 +116,32 @@
       "source": [
         "SELECT SUM(standard_amt_usd)/SUM(standard_qty) AS amount_per_unit\n",
         "FROM orders;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QV8k4cXDgxUC"
+      },
+      "source": [
+        "SELECT MIN(occurred_at) AS earliest_date\n",
+        "FROM orders;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "plLbM08cg_Xm"
+      },
+      "source": [
+        "SELECT occurred_at\n",
+        "FROM orders\n",
+        "ORDER BY occurred_at\n",
+        "LIMIT 1;"
       ],
       "execution_count": null,
       "outputs": []
