--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPvFSjhw33X7l9Gd0g3cBKw",
+      "authorship_tag": "ABX9TyOlSGiDlsSGJXmYy5UHoH+D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,6 +142,18 @@
         "FROM orders\n",
         "ORDER BY occurred_at\n",
         "LIMIT 1;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UqvivROUhNy0"
+      },
+      "source": [
+        "SELECT MAX(occurred_at) AS latest_date\n",
+        "FROM web_events;"
       ],
       "execution_count": null,
       "outputs": []
