--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOlSGiDlsSGJXmYy5UHoH+D",
+      "authorship_tag": "ABX9TyM0jmLBLCwFWy9rQXiblDvc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,6 +154,20 @@
       "source": [
         "SELECT MAX(occurred_at) AS latest_date\n",
         "FROM web_events;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "APD5PYtfNCyp"
+      },
+      "source": [
+        "SELECT occurred_at\n",
+        "FROM web_events\n",
+        "ORDER BY occurred_at DESC\n",
+        "LIMIT 1;\n"
       ],
       "execution_count": null,
       "outputs": []
