--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM0jmLBLCwFWy9rQXiblDvc",
+      "authorship_tag": "ABX9TyNGtfn0X3z0wr2sXjpZAY8M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -168,6 +168,34 @@
         "FROM web_events\n",
         "ORDER BY occurred_at DESC\n",
         "LIMIT 1;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vo3aUoG_pxkR"
+      },
+      "source": [
+        "SELECT AVG(standard_qty) AS standard_average, AVG(gloss_qty) AS gloss_avg, AVG(poster_qty) AS poster_avg, AVG(standard_amt_usd) AS standard_amt_avg, AVG(gloss_amt_usd) AS gloss_amt_avg, AVG(poster_amt_usd) AS poster_amt_avg\n",
+        "FROM orders;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QY_7Dpqmp6xE"
+      },
+      "source": [
+        "SELECT a.name, o.occurred_at\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON o.account_id = a.id\n",
+        "ORDER BY o.occurred_at\n",
+        "LIMIT 1;"
       ],
       "execution_count": null,
       "outputs": []
