--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNGtfn0X3z0wr2sXjpZAY8M",
+      "authorship_tag": "ABX9TyOFWyxXcdOn2sgBP+p0h/UO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -195,6 +195,37 @@
         "JOIN accounts a\n",
         "ON o.account_id = a.id\n",
         "ORDER BY o.occurred_at\n",
+        "LIMIT 1;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "afnlQwlzZ738"
+      },
+      "source": [
+        "SELECT a.name, SUM(o.total_amt_usd)\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON o.account_id = a.id\n",
+        "GROUP BY a.name;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V6JEqYWAaGYq"
+      },
+      "source": [
+        "SELECT w.channel, w.occurred_at, a.name\n",
+        "FROM accounts a\n",
+        "JOIN web_events w\n",
+        "ON w.account_id = a.id\n",
+        "ORDER BY w.occurred_at DESC\n",
         "LIMIT 1;"
       ],
       "execution_count": null,
