--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOFWyxXcdOn2sgBP+p0h/UO",
+      "authorship_tag": "ABX9TyNtq0cuh5DYfDeeRZmnWF6r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -227,6 +227,19 @@
         "ON w.account_id = a.id\n",
         "ORDER BY w.occurred_at DESC\n",
         "LIMIT 1;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nq0uGv-qaQE2"
+      },
+      "source": [
+        "SELECT w.channel, COUNT(channel)\n",
+        "FROM web_events w\n",
+        "GROUP BY w.channel;"
       ],
       "execution_count": null,
       "outputs": []
