--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNtq0cuh5DYfDeeRZmnWF6r",
+      "authorship_tag": "ABX9TyNYhQrU1Bd7/Me1ar2KtJTm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -240,6 +240,22 @@
         "SELECT w.channel, COUNT(channel)\n",
         "FROM web_events w\n",
         "GROUP BY w.channel;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MPlZCnnMamEI"
+      },
+      "source": [
+        "SELECT a.primary_poc\n",
+        "FROM accounts a\n",
+        "JOIN web_events w\n",
+        "ON w.account_id = a.id\n",
+        "ORDER BY w.occurred_at\n",
+        "LIMIT 1;"
       ],
       "execution_count": null,
       "outputs": []
