--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNYhQrU1Bd7/Me1ar2KtJTm",
+      "authorship_tag": "ABX9TyOHFayknYifjcsoYfKjePBB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -256,6 +256,38 @@
         "ON w.account_id = a.id\n",
         "ORDER BY w.occurred_at\n",
         "LIMIT 1;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6s42_Sk2qYzO"
+      },
+      "source": [
+        "SELECT a.name, MIN(o.total_amt_usd) AS minimum_amount\n",
+        "FROM accounts a\n",
+        "JOIN orders o\n",
+        "ON a.id = o.account_id\n",
+        "GROUP BY a.name\n",
+        "ORDER BY minimum_amount;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1M1IkgkFqkl9"
+      },
+      "source": [
+        "SELECT r.name, COUNT(s.name) as sales_reps\n",
+        "FROM region r\n",
+        "JOIN sales_reps s\n",
+        "ON r.id = s.region_id\n",
+        "GROUP BY r.name\n",
+        "ORDER BY sales_reps;"
       ],
       "execution_count": null,
       "outputs": []
