--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOHFayknYifjcsoYfKjePBB",
+      "authorship_tag": "ABX9TyM9mPlhJhKZ4g24O1/R7asl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -288,6 +288,21 @@
         "ON r.id = s.region_id\n",
         "GROUP BY r.name\n",
         "ORDER BY sales_reps;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WYEeyBOnqw_7"
+      },
+      "source": [
+        "SELECT a.name, AVG(o.standard_qty) AS mean_standard, AVG(o.gloss_qty) AS mean_gloss, AVG(o.poster_qty) AS mean_poster\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON o.account_id = a.id\n",
+        "GROUP BY a.name; "
       ],
       "execution_count": null,
       "outputs": []
