--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM9mPlhJhKZ4g24O1/R7asl",
+      "authorship_tag": "ABX9TyMJ+d+avvhxUiY4ZQnNzpmb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -303,6 +303,39 @@
         "JOIN accounts a\n",
         "ON o.account_id = a.id\n",
         "GROUP BY a.name; "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZrvAIWwqGmRz"
+      },
+      "source": [
+        "SELECT a.name, AVG(o.standard_amt_usd) AS mean_standard, AVG(o.gloss_amt_usd) AS mean_gloss, AVG(o.poster_amt_usd) AS mean_poster\n",
+        "FROM orders o\n",
+        "JOIN accounts a\n",
+        "ON o.account_id = a.id\n",
+        "GROUP BY a.name; "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ixqWndqHGzb2"
+      },
+      "source": [
+        "SELECT w.channel, s.name, COUNT(w.id) AS count\n",
+        "FROM sales_reps s\n",
+        "JOIN accounts a\n",
+        "ON s.id = a.sales_rep_id\n",
+        "JOIN web_events w\n",
+        "ON a.id = w.account_id\n",
+        "GROUP BY w.channel, s.name\n",
+        "ORDER BY count DESC;"
       ],
       "execution_count": null,
       "outputs": []
