--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMJ+d+avvhxUiY4ZQnNzpmb",
+      "authorship_tag": "ABX9TyPl16oo/RM5IMfqaDCl3kUa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -336,6 +336,26 @@
         "ON a.id = w.account_id\n",
         "GROUP BY w.channel, s.name\n",
         "ORDER BY count DESC;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cWBIf7SRHFGH"
+      },
+      "source": [
+        "SELECT w.channel, r.name, COUNT(w.id) AS count\n",
+        "FROM region r\n",
+        "JOIN sales_reps s\n",
+        "ON r.id = s.region_id\n",
+        "JOIN accounts a\n",
+        "ON s.id = a.sales_rep_id\n",
+        "JOIN web_events w\n",
+        "ON a.id = w.account_id\n",
+        "GROUP BY w.channel, r.name\n",
+        "ORDER BY count DESC;\n"
       ],
       "execution_count": null,
       "outputs": []
