--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPl16oo/RM5IMfqaDCl3kUa",
+      "authorship_tag": "ABX9TyNNl0n14Ay4AigSKjNxybvk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -356,6 +356,35 @@
         "ON a.id = w.account_id\n",
         "GROUP BY w.channel, r.name\n",
         "ORDER BY count DESC;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oY3wzvrJ0Hqc"
+      },
+      "source": [
+        "SELECT DISTINCT r.name, a.id\n",
+        "FROM region r\n",
+        "JOIN sales_reps s\n",
+        "ON r.id = s.region_id\n",
+        "JOIN accounts a\n",
+        "ON s.id = a.sales_rep_id\n",
+        "ORDER BY a.id;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Svlo_VNZ0Seo"
+      },
+      "source": [
+        "SELECT DISTInCT id,name\n",
+        "FROM accounts;"
       ],
       "execution_count": null,
       "outputs": []
