--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNNl0n14Ay4AigSKjNxybvk",
+      "authorship_tag": "ABX9TyP2xah9+WSQoaypwYFn3wSN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -385,6 +385,18 @@
       "source": [
         "SELECT DISTInCT id,name\n",
         "FROM accounts;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BhGCkOAi0bKa"
+      },
+      "source": [
+        "SELECT DISTINCT id, name\n",
+        "FROM sales_reps;"
       ],
       "execution_count": null,
       "outputs": []
