--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP2xah9+WSQoaypwYFn3wSN",
+      "authorship_tag": "ABX9TyOFH2t8JD3yO9cGcXUFAAlT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -397,6 +397,23 @@
       "source": [
         "SELECT DISTINCT id, name\n",
         "FROM sales_reps;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ofeSmigtUXoY"
+      },
+      "source": [
+        "SELECT s.name, s.id, COUNT (s.id) as num_accounts\n",
+        "FROM sales_reps s\n",
+        "JOIN accounts a\n",
+        "ON a.sales_rep_id = s.id\n",
+        "GROUP BY s.name, s.id\n",
+        "HAVING COUNT(s.id)>5\n",
+        "ORDER BY num_accounts;\n"
       ],
       "execution_count": null,
       "outputs": []
