--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOFH2t8JD3yO9cGcXUFAAlT",
+      "authorship_tag": "ABX9TyPrB0zql8jdnvsm3EuvNPeY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -414,6 +414,23 @@
         "GROUP BY s.name, s.id\n",
         "HAVING COUNT(s.id)>5\n",
         "ORDER BY num_accounts;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K35-vlU-Umzz"
+      },
+      "source": [
+        "SELECT a.id, a.name, COUNT(*) as num_orders\n",
+        "FROM accounts a\n",
+        "JOIN orders o\n",
+        "ON o.account_id = a.id\n",
+        "GROUP BY a.id, a.name\n",
+        "HAVING COUNT(*)>20\n",
+        "ORDER BY num_orders;"
       ],
       "execution_count": null,
       "outputs": []
