--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPrB0zql8jdnvsm3EuvNPeY",
+      "authorship_tag": "ABX9TyOZbOXkk4kxn4m3/tkDpcH5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -431,6 +431,23 @@
         "GROUP BY a.id, a.name\n",
         "HAVING COUNT(*)>20\n",
         "ORDER BY num_orders;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IA5ujHz5U177"
+      },
+      "source": [
+        "SELECT a.id, a.name, COUNT(*) as num_orders\n",
+        "FROM accounts a\n",
+        "JOIN orders o\n",
+        "ON o.account_id = a.id\n",
+        "GROUP BY a.id, a.name\n",
+        "ORDER BY num_orders DESC\n",
+        "LIMIT 1;"
       ],
       "execution_count": null,
       "outputs": []
