--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM1KSn9dvdYfVqZ1zqB5FhG",
+      "authorship_tag": "ABX9TyNvPHlR+aeOqCFExN2ACuGw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -465,6 +465,23 @@
         "GROUP BY a.id, a.name\n",
         "HAVING SUM(o.total_amt_usd)>30000\n",
         "ORDER BY total_spent;\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g31S0XGI2Qr-"
+      },
+      "source": [
+        "SELECT a.id, a.name, SUM(o.total_amt_usd) AS total_spent\n",
+        "FROM orders o\n",
+        "JOIN accounts a \n",
+        "ON a.id = o.account_id\n",
+        "GROUP BY a.id, a.name\n",
+        "HAVING SUM(o.total_amt_usd)<1000\n",
+        "ORDER BY total_spent;"
       ],
       "execution_count": null,
       "outputs": []
