--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNvPHlR+aeOqCFExN2ACuGw",
+      "authorship_tag": "ABX9TyPpqXvAASqVahsn15HexO77",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -482,6 +482,23 @@
         "GROUP BY a.id, a.name\n",
         "HAVING SUM(o.total_amt_usd)<1000\n",
         "ORDER BY total_spent;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tVbP8FO92ejP"
+      },
+      "source": [
+        "SELECT a.name, a.id, SUM(o.total_amt_usd) AS total_spent\n",
+        "FROM accounts a\n",
+        "JOIN orders o\n",
+        "ON a.id = o.account_id\n",
+        "GROUP BY a.name, a.id\n",
+        "ORDER BY total_spent DESC\n",
+        "LIMIT 1;"
       ],
       "execution_count": null,
       "outputs": []
