--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPpqXvAASqVahsn15HexO77",
+      "authorship_tag": "ABX9TyMSmdga4dpfuGR9kVUVfHCo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -498,6 +498,23 @@
         "ON a.id = o.account_id\n",
         "GROUP BY a.name, a.id\n",
         "ORDER BY total_spent DESC\n",
+        "LIMIT 1;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J-Vwgf2wBITr"
+      },
+      "source": [
+        "SELECT a.name, a.id, SUM(o.total_amt_usd) AS total_spent\n",
+        "FROM accounts a\n",
+        "JOIN orders o\n",
+        "ON a.id = o.account_id\n",
+        "GROUP BY a.name, a.id\n",
+        "ORDER BY total_spent \n",
         "LIMIT 1;"
       ],
       "execution_count": null,
