--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMSmdga4dpfuGR9kVUVfHCo",
+      "authorship_tag": "ABX9TyOdu/AZ7/OwSB9r7vCk7GCZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -516,6 +516,24 @@
         "GROUP BY a.name, a.id\n",
         "ORDER BY total_spent \n",
         "LIMIT 1;"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FF-9eijEBhgp"
+      },
+      "source": [
+        "SELECT a.name, a.id, w.channel, COUNT(w.channel) AS num_times\n",
+        "FROM accounts a\n",
+        "JOIN web_events w\n",
+        "ON w.account_id = a.id\n",
+        "GROUP BY a.id,a.name, w.channel\n",
+        "HAVING COUNT(w.channel)>6 AND w.channel = 'facebook'\n",
+        "ORDER BY num_times;\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
