--- a/Quiz3_SQL.ipynb
+++ b/Quiz3_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Quiz3_SQL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOdu/AZ7/OwSB9r7vCk7GCZ",
+      "authorship_tag": "ABX9TyNO7xImNCddHp5DxyrgqWdd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -533,6 +533,25 @@
         "GROUP BY a.id,a.name, w.channel\n",
         "HAVING COUNT(w.channel)>6 AND w.channel = 'facebook'\n",
         "ORDER BY num_times;\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XxgTqLpxBu_2"
+      },
+      "source": [
+        "SELECT a.name, a.id, w.channel, COUNT(w.channel) AS num_times\n",
+        "FROM accounts a\n",
+        "JOIN web_events w\n",
+        "ON w.account_id = a.id\n",
+        "WHERE w.channel = 'facebook'\n",
+        "GROUP BY a.id,a.name, w.channel\n",
+        "ORDER BY num_times DESC\n",
+        "LIMIT 1;\n",
         "\n"
       ],
       "execution_count": null,
